# CineMatch

./: .gitignore  README.md  dataset_to_liquibase.py  docker-compose.yml  install.ps1  install.sh
ai-movie_clustering/: .env.default  .gitignore
ai-movie_clustering/core/: config.py
big-data/: main.py  mlb.pkl  requirements.txt  training.py  trainingV2.py  vectorizer.pkl
celery_worker/: Dockerfile  __init__.py  celery_app.py
cinematch-backend/: Dockerfile  Dockerfile_prod  README.md  pom.xml
cinematch-backend-service/: Readme.md  docker-compose.yml  install.ps1  install.sh  pom.xml
cinematch-backend-service/cinematch-backend/: Dockerfile  README.md  pom.xml
cinematch-backend-service/common-module/: pom.xml
cinematch-backend-service/orchestrator/: Dockerfile  (+1 more)
cinematch-frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json  tsconfig.json
dataset-to-liquibase/: clean_xml.py  create_changeset.py  dataset_to_liquibase.py  install_full_db.ps1  install_minimal_db.ps1
express-socket/: Dockerfile  nodemon.json  package-lock.json  package.json
python-api/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
python-api/ai_movie_clustering.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python-api/core/output/: create_changeset.py
python-api/core/scripts/: enrich_omdb.py  inference.py  reco_to_liquibase.py  training.py  truncate_dataset.py
python-api/core/utils/: decorators.py  utils_enrich.py  utils_inference.py  utils_text.py
stomp_listener/: Dockerfile  listener.py  tasks.py
(+345 files in other folders)
